--- a/AutoMall/ViewControllers/Upkeep/AutoCheckOrderVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckOrderVC.xib
@@ -120,7 +120,7 @@
                         <constraint firstItem="9Hi-EX-Qbe" firstAttribute="centerY" secondItem="kyJ-YN-wRb" secondAttribute="centerY" id="xUS-Aw-7LE"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tzB-W8-K12">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tzB-W8-K12">
                     <rect key="frame" x="0.0" y="154" width="375" height="180"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmu-XN-rbV">
@@ -176,8 +176,8 @@
                         <constraint firstAttribute="bottom" secondItem="jmu-XN-rbV" secondAttribute="bottom" id="yKS-U5-oil"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请扫描商家二维码支付" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JFV-rw-GUq">
-                    <rect key="frame" x="111" y="364" width="153" height="18"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请线下完成支付" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JFV-rw-GUq">
+                    <rect key="frame" x="134" y="364" width="107.5" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
