--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderMultiCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderMultiCell.xib
@@ -123,14 +123,13 @@
                         </constraints>
                     </imageView>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D1K-v5-3Ot">
-                        <rect key="frame" x="16" y="147" width="60" height="25"/>
-                        <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="16" y="147" width="20" height="25"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="2U0-vy-BGY"/>
                             <constraint firstAttribute="height" constant="25" id="fkH-Pv-FpT"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <state key="normal" title="已开票">
+                        <state key="normal" image="invoiceStatus">
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
@@ -171,12 +170,13 @@
                 <outlet property="picScrollView" destination="EdE-Jy-Edl" id="Fz4-CZ-6tO"/>
                 <outlet property="statusL" destination="aC5-XT-BtE" id="nrP-W3-5gS"/>
             </connections>
-            <point key="canvasLocation" x="-258" y="9"/>
+            <point key="canvasLocation" x="-157" y="2"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="arrows" width="26" height="48"/>
         <image name="checkbox_no" width="90" height="90"/>
         <image name="checkbox_yes" width="90" height="90"/>
+        <image name="invoiceStatus" width="20" height="20"/>
     </resources>
 </document>
