--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderSingleCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderSingleCell.xib
@@ -41,7 +41,8 @@
                                     <constraint firstAttribute="height" constant="44" id="YDy-8F-uXV"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
-                                <state key="normal" image="checkbox_no"/>
+                                <state key="normal" image="checkbox_no_enable"/>
+                                <state key="disabled" image="checkbox_no"/>
                                 <state key="selected" image="checkbox_yes"/>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="sOp-pp-ZM3">
@@ -204,6 +205,7 @@
     <resources>
         <image name="arrows" width="26" height="48"/>
         <image name="checkbox_no" width="90" height="90"/>
+        <image name="checkbox_no_enable" width="90" height="90"/>
         <image name="checkbox_yes" width="90" height="90"/>
         <image name="invoiceStatus" width="20" height="20"/>
         <image name="placeholderPictureSquare" width="151" height="151"/>
